header image alignment fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -205,13 +205,30 @@ body {
 
 .page-header img {
     position: static;
-    width: 100%;
-    height: auto;
+    /* width: 100%;
+    height: auto; */
      max-height: 250px;
     bottom: unset;
     border-radius: 12px;
     object-fit: cover;
     overflow: hidden;
+}
+.full-image-container {
+    max-height: 160px; /* Set your desired maximum height here */
+    width: 100%;
+    overflow: hidden; /* Hides any part of the image that might exceed the container, though object-fit should prevent this */
+    display: flex; /* Helps in centering the image */
+    align-items: center;
+    justify-content: center;
+}
+.full-image-container a img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain; /* This is the key property */
+    object-position: center; /* Centers the image within the container */
+}
+.full-image-container a{
+     
 }
 
 h1 {
